--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Inicio</title>
 </head>
 <body>
-    <a href="www.youtube.com"></a>
+
+<footer>
+    <div>Sebastian Chiterer</div><div>Tobias Denham</div><div>Ana Teperman</div>
+</footer>
 </body>
 </html>
