--- a/index.html
+++ b/index.html
@@ -12,37 +12,50 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <body>
+
     <header>       
         <nav>
             <div id="logo">
             <img class="logo" src="./img/Logo D&I Films.png" alt="Logo de la pagina">
             </div>
-            <div class="techo">
+            <div class="header-nav">
                 <a href="./index.html">Inicio</a> 
             </div>
-            <div class="techo">
+            <div class="header-nav">
                 <a href="./genres.html">Géneros</a> 
             </div>
-            <div class="techo">
+            <div class="header-nav">
                 <a href="./detail-movies.html">Peliculas</a>
             </div>
-            <div class="techo">
+            <div class="header-nav">
                 <a href="./detail-series.html">Series</a>
             </div>   
-            <div class="techo">
+            <div class="header-nav">
                 <a href="./about.html">Acerca de nosotros</a>
             </div>         
-            <div class="techo">
+            <div class= "header-busqueda" >
                 <input type="search" name="busqueda" value="" placeholder="Buscar peliculas o series">
             </div>
-            <div class="techo">
+            <div class="header-registro">
                 <input type="button" value="Resgistrarse">
              </div> 
-            <div class="techo">
+            <div class="header-registro">
                 <input type="button" value="Login">
             </div>
         </nav>  
     </header>
+
+
+
+
+
+
+
+
+
+
+
+
 
     <footer>
         <div class="container_footer">
