Películas populares del index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="./genres.html">Géneros</a> 
             </div>
             <div class="header-nav">
-                <a href="./detail-movies.html">Peliculas</a>
+                <a href="./detail-movies.html">Películas</a>
             </div>
             <div class="header-nav">
                 <a href="./detail-series.html">Series</a>
@@ -34,7 +34,7 @@
                 <a href="./about.html">Acerca de nosotros</a>
             </div>         
             <div class= "header-busqueda" >
-                <input type="search" name="busqueda" value="" placeholder="Buscar peliculas o series">
+                <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
             </div>
             <div class="header-registro">
                 <input type="button" value="Resgistrarse">
@@ -45,6 +45,38 @@
         </nav>  
     </header>
 
+    <main>
+        <div class="peliculas-populares">
+            <h2>• PELÍCULAS POPULARES •</h2>
+              <div class="main-container">
+                <div class="marvel-endgame">
+                    <a href="./detail-movies.html"><img src="./img/marvel-endgame.jfif" alt="Ficha end game"></a>
+                    <h3>MARVEL: END GAME</h3>
+                    <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
+                </div>
+                <div class="the-last-song">
+                    <a href="#"><img src="./img/thelastsong.jfif" alt="Ficha de the last song"></a>
+                    <h3>    THE LAST SONG    </h3>
+                    <p>2010 ‧ Romance/Drama ‧ 1h 47m</p>
+                </div>
+                <div class="la-chica-danesa">
+                    <a href="#"><img src="./img/la-chica-danesa.jpg" alt="Ficha de La chica danesa"></a>
+                    <h3>LA CHICA DANESA</h3>
+                    <p>2015 ‧ Romance/Drama ‧ 1h 59m</p>
+                </div>
+                <div class="sherlock-holmes">
+                <a href="#"><img src="./img/sherlock-holmes.jfif" alt="Ficha de Sherlock Holmes"></a>
+                    <h3>SHERLOCK HOLMES</h3>
+                    <p>2009 ‧ Misterio/Misterio ‧ 2h 8m</p>
+                </div>
+                <div class="lucy">
+                    <a href="#"><img src="./img/lucy.jfif" alt="Ficha de Lucy"></a>
+                    <h3>LUCY</h3>
+                    <p>2014 ‧ Acción/Ciencia ficción ‧ 1h 30m</p>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
 
