aplicando estilo de cuevana a todo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>       
         <nav>
             <div id="logo">
-            <img class="logo" src="./img/Logo D&I Films.png" alt="Logo de la pagina">
+            <img class="logo" src="./img/logo-blanco-3.png" alt="Logo de la pagina">
             </div>
             <div class="header-nav">
                 <a href="./index.html">Inicio</a> 
@@ -37,7 +37,7 @@
                 <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
             </div>
             <div class="header-registro">
-                <input type="button" value="Resgistrarse">
+                <input type="button" value="Registrarse">
              </div> 
             <div class="header-registro">
                 <input type="button" value="Login">
@@ -93,7 +93,7 @@
         <div class="container_footer">
             <div class="box-footer">
                     <div class="logo">
-                        <img src="./img/Logo D&I Films.png" alt="logo">
+                        <img src="./img/logo-blanco-3.png" alt="logo">
                     </div>
                     <div class="terms">
                         <p> D&I Films es un servicio de streaming gratuito que tiene como objetivo que todas las personas puedan accerder a contenido de calidad. Surge como una iniciativa de la coorporativa D&I Code, encabezada y desarrollada por sus dueños fundadores Chiterer Sebastian, Denham Tobias y Teperman Ana.</p>
