--- a/index.html
+++ b/index.html
@@ -74,6 +74,94 @@
                 </div>
             </div>
         </div>
+        <div class="lomasvistoenpeliculas">
+            <h2>• LO MÁS VISTO EN PELÍCULAS •</h2>
+              <div class="main-container">
+                <div class="los-ilusionistas">
+                    <a href="#"><img src="./img/los ilusionistas.jfif" alt="Ficha Los Ilusionistas"></a>
+                    <h3>LOS ILUSIONISTAS: NADA ES LO QUE PARECE</h3>
+                    <p>2013 ‧ Crimen/Suspenso ‧ 1h 55m</p>
+                </div>
+                <div class="joe-black">
+                    <a href="#"><img src="./img/JOE-BLACK.jfif" alt="Ficha JOe Black"></a>
+                    <h3> ¿CONOCES A JOE BLACK? </h3>
+                    <p>1998 ‧ Romance/Fantasía ‧ 3h 1m</p>
+                </div>
+                <div class="marvel-endgame">
+                    <a href="./detail-movies.html"><img src="./img/marvel-endgame.jfif" alt="Ficha end game"></a>
+                    <h3>MARVEL: END GAME</h3>
+                    <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
+                </div>
+                <div class="nerve">
+                <a href="#"><img src="./img/nerve.jpg" alt="Ficha de Nerve"></a>
+                    <h3>NERVE:UN JUEGO SIN REGLAS</h3>
+                    <p>2016 ‧ Suspenso/Acción ‧ 1h 36m</p>
+                </div>
+                <div class="howtolose">
+                    <a href="#"><img src="./img/HTLAMI10D.jpg" alt="Ficha de How to lose a man in 10 days"></a>
+                    <h3>CÓMO PERDER A UN HOMBRE EN 10 DÍAS</h3>
+                    <p>2003 ‧ Romance/Comedia romántica ‧ 1h 56m</p>
+                </div>
+            </div>
+        </div>
+        <div class="popu-series">
+            <h2>• SERIES POPULARES •</h2>
+              <div class="main-container">
+                <div class="casadepapel">
+                    <a href="./detail-series.html"><img src="./img/casadepapel.jfif" alt="Ficha casa de papel"></a>
+                    <h3>LA CASA DE PAPEL</h3>
+                    <p>2017 ‧ Suspenso ‧ 5 temporadas</p>
+                </div>
+                <div class="anne">
+                    <a href="#"><img src="./img/anne.jfif" alt="Ficha de Anne with an E"></a>
+                    <h3>    ANNE WITH AN E   </h3>
+                    <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
+                </div>
+                <div class="los100">
+                    <a href="#"><img src="./img/los100.jpg" alt="Ficha de Los 100"></a>
+                    <h3>LOS 100</h3>
+                    <p>2014 ‧ Ciencia ficción ‧ 7 temporadas</p>
+                </div>
+                <div class="vis-a-vis">
+                <a href="#"><img src="./img/visavis.jfif" alt="Ficha de Vis a Vis"></a>
+                    <h3>VIS A VIS</h3>
+                    <p>2015 ‧ Suspenso ‧ 4 temporadas</p>
+                </div>
+                <div class="outlander">
+                    <a href="#"><img src="./img/outlander.jpg" alt="Ficha de outlander"></a>
+                    <h3>OUTLANDER</h3>
+                    <p>2014 ‧ Drama ‧ 5 temporadas</p>
+                </div>
+            </div>
+            <div class="visto-series">
+                <h2>• LO MÁS VISTO EN SERIES •</h2>
+                  <div class="main-container">
+                    <div class="cobrakai">
+                        <a href="#"><img src="./img/cobrakai.jfif" alt="Ficha Cobra Kai"></a>
+                        <h3>COBRA KAI</h3>
+                        <p>2018 ‧ Acción ‧ 3 temporadas</p>
+                    </div>
+                    <div class="jane">
+                        <a href="#"><img src="./img/jane.jpg" alt="Ficha de Jane the Virgin"></a>
+                        <h3>    JANE THE VIRGIN  </h3>
+                        <p>2014 ‧ Drama ‧ 5 temporadas</p>
+                    </div>
+                    <div class="flash">
+                        <a href="#"><img src="./img/flash.jpg.crdownload" alt="Ficha de Flash"></a>
+                        <h3> FLASH </h3>
+                        <p>2014 ‧ Ciencia ficción ‧ 7 temporadas</p>
+                    </div>
+                    <div class="casadepapel">
+                        <a href="./detail-series.html"><img src="./img/casadepapel.jfif" alt="Ficha casa de papel"></a>
+                        <h3>LA CASA DE PAPEL</h3>
+                        <p>2017 ‧ Suspenso ‧ 5 temporadas</p>
+                    </div>
+                    <div class="breaking-bad">
+                        <a href="#"><img src="./img/breakingbad.jpg" alt="Ficha de breaking bad"></a>
+                        <h3>BREAKING BAD </h3>
+                        <p>2008 ‧ Drama ‧ 5 temporadas</p>
+                    </div>
+                </div>
     </main>
 
 
