--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
             </div>
             <div class="header-registro">
-                <input type="button" value="Registrarse" >
+                <a href="./register.html"><input type="button" value="Registrarse"></a>
              </div> 
             <div class="header-registro">
-                <input type="button" value="Login">
+                <a href="./login.html"><input type="button" value="Login"></a>
             </div>
         </nav>  
     </header>
