--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <div class="header-nav">
                 <a href="./detail-series.html">Series</a>
             </div>   
-            <div class="header-nav">
+            <!-- <div class="header-nav">
                 <a href="./about.html">Acerca de nosotros</a>
-            </div>         
+            </div>          -->
             <div class= "header-busqueda" >
                 <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
             </div>
