primero cambios antes de hacer generos

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <form action="./results.html" method="GET"></form>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,11 +30,9 @@
             <div class="header-nav">
                 <a href="./detail-series.html">Series</a>
             </div>   
-            <!-- <div class="header-nav">
-                <a href="./about.html">Acerca de nosotros</a>
-            </div>          -->
-            <div class= "header-busqueda" >
+            <div class= "header-busqueda">
                 <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+                <a href="./results.html"><i class="fas fa-search lupa"></i></a>
             </div>
             <div class="header-registro">
                 <a href="./register.html"><input type="button" value="Registrarse"></a>
@@ -48,27 +47,27 @@
             <h2>• PELÍCULAS POPULARES •</h2>
               <div class="main-container">
                 <div class="marvel-endgame">
-                    <a href="./detail-movies.html"><img src="./img/marvel-endgame.jfif" alt="Ficha end game"></a>
+                    <a href="detail-movies.html"><img src="./img/marvel-endgame.jfif" alt="Ficha end game"></a>
                     <h3>MARVEL: END GAME</h3>
                     <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
                 </div>
                 <div class="the-last-song">
-                    <a href="#"><img src="./img/thelastsong.jfif" alt="Ficha de the last song"></a>
+                    <a href="detail-movies.html"><img src="./img/thelastsong.jfif" alt="Ficha de the last song"></a>
                     <h3>    THE LAST SONG    </h3>
                     <p>2010 ‧ Romance/Drama ‧ 1h 47m</p>
                 </div>
                 <div class="la-chica-danesa">
-                    <a href="#"><img src="./img/la-chica-danesa.jpg" alt="Ficha de La chica danesa"></a>
+                    <a href="detail-movies.html"><img src="./img/la-chica-danesa.jpg" alt="Ficha de La chica danesa"></a>
                     <h3>LA CHICA DANESA</h3>
                     <p>2015 ‧ Romance/Drama ‧ 1h 59m</p>
                 </div>
                 <div class="sherlock-holmes">
-                <a href="#"><img src="./img/sherlock-holmes.jfif" alt="Ficha de Sherlock Holmes"></a>
+                <a href="detail-movies.html"><img src="./img/sherlock-holmes.jfif" alt="Ficha de Sherlock Holmes"></a>
                     <h3>SHERLOCK HOLMES</h3>
                     <p>2009 ‧ Misterio/Misterio ‧ 2h 8m</p>
                 </div>
                 <div class="lucy">
-                    <a href="#"><img src="./img/lucy.jfif" alt="Ficha de Lucy"></a>
+                    <a href="detail-movies.html"><img src="./img/lucy.jfif" alt="Ficha de Lucy"></a>
                     <h3>LUCY</h3>
                     <p>2014 ‧ Acción/Ciencia ficción ‧ 1h 30m</p>
                 </div>
@@ -78,12 +77,12 @@
             <h2>• LO MÁS VISTO EN PELÍCULAS •</h2>
               <div class="main-container">
                 <div class="los-ilusionistas">
-                    <a href="#"><img src="./img/los ilusionistas.jfif" alt="Ficha Los Ilusionistas"></a>
+                    <a href="detail-movies.html"><img src="./img/los ilusionistas.jfif" alt="Ficha Los Ilusionistas"></a>
                     <h3>LOS ILUSIONISTAS: NADA ES LO QUE PARECE</h3>
                     <p>2013 ‧ Crimen/Suspenso ‧ 1h 55m</p>
                 </div>
                 <div class="joe-black">
-                    <a href="#"><img src="./img/JOE-BLACK.jfif" alt="Ficha JOe Black"></a>
+                    <a href="detail-movies.html"><img src="./img/JOE-BLACK.jfif" alt="Ficha JOe Black"></a>
                     <h3> ¿CONOCES A JOE BLACK? </h3>
                     <p>1998 ‧ Romance/Fantasía ‧ 3h 1m</p>
                 </div>
@@ -93,12 +92,12 @@
                     <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
                 </div>
                 <div class="nerve">
-                <a href="#"><img src="./img/nerve.jpg" alt="Ficha de Nerve"></a>
+                <a href="detail-movies.html"><img src="./img/nerve.jpg" alt="Ficha de Nerve"></a>
                     <h3>NERVE:UN JUEGO SIN REGLAS</h3>
                     <p>2016 ‧ Suspenso/Acción ‧ 1h 36m</p>
                 </div>
                 <div class="howtolose">
-                    <a href="#"><img src="./img/HTLAMI10D.jpg" alt="Ficha de How to lose a man in 10 days"></a>
+                    <a href="detail-movies.html"><img src="./img/HTLAMI10D.jpg" alt="Ficha de How to lose a man in 10 days"></a>
                     <h3>CÓMO PERDER A UN HOMBRE EN 10 DÍAS</h3>
                     <p>2003 ‧ Romance/Comedia romántica ‧ 1h 56m</p>
                 </div>
@@ -108,27 +107,27 @@
             <h2>• SERIES POPULARES •</h2>
               <div class="main-container">
                 <div class="casadepapel">
-                    <a href="./detail-series.html"><img src="./img/casadepapel.jfif" alt="Ficha casa de papel"></a>
+                    <a href="detail-series.html"><img src="./img/casadepapel.jfif" alt="Ficha casa de papel"></a>
                     <h3>LA CASA DE PAPEL</h3>
                     <p>2017 ‧ Suspenso ‧ 5 temporadas</p>
                 </div>
                 <div class="anne">
-                    <a href="#"><img src="./img/anne.jfif" alt="Ficha de Anne with an E"></a>
+                    <a href="detail-series.html"><img src="./img/anne.jfif" alt="Ficha de Anne with an E"></a>
                     <h3>    ANNE WITH AN E   </h3>
                     <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
                 </div>
                 <div class="los100">
-                    <a href="#"><img src="./img/los100.jpg" alt="Ficha de Los 100"></a>
+                    <a href="detail-series.html"><img src="./img/los100.jpg" alt="Ficha de Los 100"></a>
                     <h3>LOS 100</h3>
                     <p>2014 ‧ Ciencia ficción ‧ 7 temporadas</p>
                 </div>
                 <div class="vis-a-vis">
-                <a href="#"><img src="./img/visavis.jfif" alt="Ficha de Vis a Vis"></a>
+                <a href="detail-series.html"><img src="./img/visavis.jfif" alt="Ficha de Vis a Vis"></a>
                     <h3>VIS A VIS</h3>
                     <p>2015 ‧ Suspenso ‧ 4 temporadas</p>
                 </div>
                 <div class="outlander">
-                    <a href="#"><img src="./img/outlander.jpg" alt="Ficha de outlander"></a>
+                    <a href="detail-series.html"><img src="./img/outlander.jpg" alt="Ficha de outlander"></a>
                     <h3>OUTLANDER</h3>
                     <p>2014 ‧ Drama ‧ 5 temporadas</p>
                 </div>
@@ -137,17 +136,17 @@
                 <h2>• LO MÁS VISTO EN SERIES •</h2>
                   <div class="main-container">
                     <div class="cobrakai">
-                        <a href="#"><img src="./img/cobrakai.jfif" alt="Ficha Cobra Kai"></a>
+                        <a href="detail-series.html"><img src="./img/cobrakai.jfif" alt="Ficha Cobra Kai"></a>
                         <h3>COBRA KAI</h3>
                         <p>2018 ‧ Acción ‧ 3 temporadas</p>
                     </div>
                     <div class="jane">
-                        <a href="#"><img src="./img/jane.jpg" alt="Ficha de Jane the Virgin"></a>
+                        <a href="detail-series.html"><img src="./img/jane.jpg" alt="Ficha de Jane the Virgin"></a>
                         <h3>    JANE THE VIRGIN  </h3>
                         <p>2014 ‧ Drama ‧ 5 temporadas</p>
                     </div>
                     <div class="flash">
-                        <a href="#"><img src="./img/flash.jpg.crdownload" alt="Ficha de Flash"></a>
+                        <a href="detail-series.html"><img src="./img/flash.jpg.crdownload" alt="Ficha de Flash"></a>
                         <h3> FLASH </h3>
                         <p>2014 ‧ Ciencia ficción ‧ 7 temporadas</p>
                     </div>
@@ -157,7 +156,7 @@
                         <p>2017 ‧ Suspenso ‧ 5 temporadas</p>
                     </div>
                     <div class="breaking-bad">
-                        <a href="#"><img src="./img/breakingbad.jpg" alt="Ficha de breaking bad"></a>
+                        <a href="detail-series.html"><img src="./img/breakingbad.jpg" alt="Ficha de breaking bad"></a>
                         <h3>BREAKING BAD </h3>
                         <p>2008 ‧ Drama ‧ 5 temporadas</p>
                     </div>
