--- a/results.html
+++ b/results.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <form action="./results.html" method="GET"></form>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Registro</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <body>
     <header>       
@@ -24,12 +26,10 @@
             </div>
             <div class="header-nav">
                 <a href="./detail-series.html">Series</a>
-            </div>   
-            <div class="header-nav">
-                <a href="./about.html">Acerca de nosotros</a>
-            </div>         
+            </div>       
             <div class= "header-busqueda" >
                 <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+                <a href="./results.html"><i class="fas fa-search lupa"></i></a>
             </div>
             <div class="header-registro">
                 <input type="button" value="Registrarse">
