--- a/about.html
+++ b/about.html
@@ -25,11 +25,12 @@
             <div class="header-nav">
                 <a href="./detail-series.html">Series</a>
             </div>   
-            <div class="header-nav">
+            <!-- <div class="header-nav">
                 <a href="./about.html">Acerca de nosotros</a>
-            </div>         
+            </div>  -->        
             <div class= "header-busqueda" >
                 <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+                <a href="./results.html"><i class="fas fa-search lupa"></i></a>
             </div>
             <div class="header-registro">
                 <input type="button" value="Registrarse">
