Metiendole al genres.html y algunos detalles

--- a/genres.html
+++ b/genres.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <form action="./results.html" method="GET"></form>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,14 +31,72 @@
                 <a href="./results.html"><i class="fas fa-search lupa"></i></a>
             </div>
             <div class="header-registro">
-                <input type="button" value="Registrarse">
+                <a href="./register.html"><input type="button" value="Registrarse"></a>
              </div> 
             <div class="header-registro">
-                <input type="button" value="Login">
+                <a href="./login.html"><input type="button" value="Login"></a>
             </div>
         </nav>  
     </header>
-   
+    
+    <main class="main-genres">
+        <div class="genres-title">
+            <h2>• GÉNEROS •</h2> 
+        </div>
+        <div class="genres-container">
+            <div class="genres-peliculas">
+                <div>
+                    <a href="./detail-genres.html"><h3>Documentales</h3></a>
+                </div>               
+                <div>
+                    <a href="./detail-genres.html"><h3>Acción</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Aventura</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Comedia</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Romance</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Terror</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Familiar</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Crimen</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Ciencia Ficción</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Animación</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Biografía</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Guerra/Bélico</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Drama</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Thriller</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Musical</h3></a>
+                </div>
+                <div>
+                    <a href="./detail-genres.html"><h3>Fantasía</h3>
+                </div></a>
+            </div>
+        </div>       
+    </main> 
+    
     <footer>
         <div class="container_footer">
             <div class="box-footer">
