--- a/detail-movies.html
+++ b/detail-movies.html
@@ -31,13 +31,21 @@
                 <a href="./results.html"><i class="fas fa-search lupa"></i></a>
             </div>
             <div class="header-registro">
-                <input type="button" value="Registrarse">
+                <a href="./register.html"><input type="button" value="Registrarse"></a>
              </div> 
             <div class="header-registro">
-                <input type="button" value="Login">
+                <a href="./login.html"><input type="button" value="Login"></a>
             </div>
         </nav>  
     </header>
+
+    <main class="detail-movies-container">
+        <div><h2>AVENGERS: END GAME</h2></div>
+        <div class="avengersfoto">
+            <img src="./img/avengershd.jpg" alt="Ficha end game">
+        </div>
+       
+    </main>
    
     <footer>
         <div class="container_footer">
