Haciendo favoritos, resultado de busqueda

--- a/detail-movies.html
+++ b/detail-movies.html
@@ -25,7 +25,10 @@
             </div>
             <div class="header-nav">
                 <a href="./detail-series.html">Series</a>
-            </div>          
+            </div> 
+            <div class="header-nav">
+                <a href="./favourite.html">Favoritos</a>
+            </div>         
             <div class= "header-busqueda" >
                 <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
                 <a href="./results.html"><i class="fas fa-search lupa"></i></a>
@@ -38,15 +41,25 @@
             </div>
         </nav>  
     </header>
+    <main>
+        <div class="peliculas-populares">
+            <h2>• MARVEL: ENDGAME •</h2>
+              <div class="main-container">
+                <div class="detail-marvel-endgame">
+                    <a href="detail-movies.html"><img src="./img/marvel-endgame.jfif" alt="Ficha end game"></a>
+                    <h3>MARVEL: END GAME</h3>
+                    <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
+                </div>
+    </main>
 
-    <main class="detail-movies-container">
+    <!-- <main class="detail-movies-container">
         <div><h2>AVENGERS: END GAME</h2></div>
         <div class="avengersfoto">
             <img src="./img/avengershd.jpg" alt="Ficha end game">
         </div>
        
     </main>
-   
+    -->
     <footer>
         <div class="container_footer">
             <div class="box-footer">
