--- a/detail-series.html
+++ b/detail-series.html
@@ -25,19 +25,23 @@
             </div>
             <div class="header-nav">
                 <a href="./detail-series.html">Series</a>
-            </div>        
+            </div>
+            <div class="header-nav">
+                <a href="./favourite.html">Favoritos</a>
+            </div>          
             <div class= "header-busqueda" >
                 <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
                 <a href="./results.html"><i class="fas fa-search lupa"></i></a>
             </div>
             <div class="header-registro">
-                <input type="button" value="Registrarse">
+                <a href="./register.html"><input type="button" value="Registrarse"></a>
              </div> 
             <div class="header-registro">
-                <input type="button" value="Login">
+                <a href="./login.html"><input type="button" value="Login"></a>
             </div>
         </nav>  
     </header>
+
    
     <footer>
         <div class="container_footer">
