--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <div class="header-nav">
                 <a href="./detail-series.html">Series</a>
             </div>   
+            <div class="header-nav">
+                <a href="./favourite.html">Favoritos</a>
+            </div>
             <div class= "header-busqueda">
                 <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
                 <a href="./results.html"><i class="fas fa-search lupa"></i></a>
@@ -49,6 +52,9 @@
                     <a href="detail-movies.html"><img src="./img/marvel-endgame.jfif" alt="Ficha end game"></a>
                     <h3>MARVEL: END GAME</h3>
                     <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
+                    <!-- <div>
+                    <a class="star-a" href="./favourite.html"><i class="fas fa-star"></i></a>
+                    </div> -->
                 </div>
                 <div class="the-last-song">
                     <a href="detail-movies.html"><img src="./img/thelastsong.jfif" alt="Ficha de the last song"></a>
