--- a/results.html
+++ b/results.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Registro</title>
+    <title>Resultados de búsqueda</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <body>
@@ -25,20 +28,42 @@
             </div>
             <div class="header-nav">
                 <a href="./detail-series.html">Series</a>
-            </div>       
-            <div class= "header-busqueda" >
+            </div>   
+            <div class="header-nav">
+                <a href="./favourite.html">Favoritos</a>
+            </div>
+            <div class= "header-busqueda">
                 <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
                 <a href="./results.html"><i class="fas fa-search lupa"></i></a>
             </div>
             <div class="header-registro">
-                <input type="button" value="Registrarse">
+                <a href="./register.html"><input type="button" value="Registrarse"></a>
              </div> 
             <div class="header-registro">
-                <input type="button" value="Login">
+                <a href="./login.html"><input type="button" value="Login"></a>
             </div>
         </nav>  
     </header>
-   
+    <!-- <main>
+        <div class="peliculas-populares">
+            <h2>• MARVEL: ENDGAME •</h2>
+              <div class="main-container">
+                <div class="detail-marvel-endgame">
+                    <a href="detail-movies.html"><img src="./img/marvel-endgame.jfif" alt="Ficha end game"></a>
+                    <h3>MARVEL: END GAME</h3>
+                    <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
+                </div>
+    </main> -->
+    <main>
+        <div class="resultados">
+            <h2>• RESULTADOS DE BÚSQUEDA •</h2>
+                <div class="main-container-result">
+                    <div>
+                     <h3>Lo sentimos, no pudimos encontrar resultados para tu búsqueda. Por favor, intentelo más tarde.</h3>
+                    </div>
+                </div>     
+    </main>
+
     <footer>
         <div class="container_footer">
             <div class="box-footer">
