--- a/login.html
+++ b/login.html
@@ -25,7 +25,10 @@
             </div>
             <div class="header-nav">
                 <a href="./detail-series.html">Series</a>
-            </div>        
+            </div>    
+            <div class="header-nav">
+                <a href="./favourite.html">Favoritos</a>
+            </div>    
             <div class= "header-busqueda" >
                 <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
                 <a href="./results.html"><i class="fas fa-search lupa"></i></a>
