Detail genres primera edición

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DRAMA</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -38,7 +38,43 @@
             </div>
         </nav>  
     </header>
-
+            <main>
+                <div class="detail-generos">
+                    <div class="fotodrama">
+                    <a href="genres.html"><img src="./img/DRAMA (1).png" alt="DRAMA"></a>
+                    </div>
+                    <div class="detailsG-tittle">
+                            <h2>• RECOMENDADO PARA TÍ •</h2>
+                            </div>
+                        <div class="detailsG">
+                    <div class="genres-box">
+                        <a href="detail-series.html"><img src="./img/outlander.jpg" alt="Ficha de outlander"></a>
+                        <h3>OUTLANDER</h3>
+                        <p>2014 ‧ Drama ‧ 5 temporadas</p>
+                    </div>
+                    <div class="genres-box">
+                        <a href="detail-movies.html"><img src="./img/la-chica-danesa.jpg" alt="Ficha de La chica danesa"></a>
+                        <h3>LA CHICA DANESA</h3>
+                        <p>2015 ‧ Romance/Drama ‧ 1h 59m</p>
+                    </div>
+                    <div class="genres-box">
+                        <a href="detail-series.html"><img src="./img/jane.jpg" alt="Ficha de Jane the Virgin"></a>
+                        <h3>    JANE THE VIRGIN  </h3>
+                        <p>2014 ‧ Drama ‧ 5 temporadas</p>
+                    </div>
+                    <div class="genres-box">
+                        <a href="detail-movies.html"><img src="./img/thelastsong.jfif" alt="Ficha de the last song"></a>
+                        <h3>    THE LAST SONG    </h3>
+                        <p>2010 ‧ Romance/Drama ‧ 1h 47m</p>
+                    </div>
+                    <div class="genres-box">
+                        <a href="detail-series.html"><img src="./img/anne.jfif" alt="Ficha de Anne with an E"></a>
+                    <h3>    ANNE WITH AN E   </h3>
+                    <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
+                    </div>
+                </div>
+                </div>
+            </main>
 
 
     <footer>
