--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <p>2014 ‧ Drama ‧ 5 temporadas</p>
                     </div>
                     <div class="flash">
-                        <a href="detail-series.html"><img src="./img/flash.jpg.crdownload" alt="Ficha de Flash"></a>
+                        <a href="detail-series.html"><img src="./img/flash.png" alt="Ficha de Flash"></a>
                         <h3> FLASH </h3>
                         <p>2014 ‧ Ciencia ficción ‧ 7 temporadas</p>
                     </div>
