--- a/detail-movies.html
+++ b/detail-movies.html
@@ -42,14 +42,31 @@
         </nav>  
     </header>
     <main>
-        <div class="peliculas-populares">
+        <div class="endgame">
             <h2>• MARVEL: ENDGAME •</h2>
-              <div class="main-container">
+            <div class="endgame-container">
                 <div class="detail-marvel-endgame">
-                    <a href="detail-movies.html"><img src="./img/marvel-endgame.jfif" alt="Ficha end game"></a>
-                    <h3>MARVEL: END GAME</h3>
-                    <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
+                   <a href="detail-movies.html"><img src="./img/marvel-endgame.jfif" alt="Ficha end game"></a>
+                   <h3>MARVEL: END GAME</h3>
+                   <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
                 </div>
+                <div class="sinopsis-endgame">
+                    <h3>Genero: Accion y Aventura, Ciencia Ficción y Fantasía</h3>
+                    <h3>Clasificacion: Intensas secuencias de acción y violencia de ciencia ficción,
+                    lenguaje y algunas referencias crudas.</h3>
+                    <h3>Sinopsis: Después de los eventos devastadores de "Avengers:
+                    Infinity War", el universo está en ruinas debido a las acciones 
+                    de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron,
+                    los Vengadores deberán reunirse una vez más para intentar detenerlo
+                    y restaurar el orden en el universo de una vez por todas.</h3>
+                    <h3>Calificacion: Al 75% de los usuarios le gustó la película.
+                    Calificación promedio: 4/5.
+                    Total de Reseñas: 213.</h3>
+                    <i class="fas fa-star star"></i>
+                    <a id="xx" href="./favourite.html"><h3 class="endgamefavs">Agregar a Favoritos</h3></a>                                                  
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- <main class="detail-movies-container">
