detalles en clase

--- a/login.html
+++ b/login.html
@@ -64,7 +64,7 @@
 
                 <div class="boton-login">
                     <input type="button" value="Login">
-                    <a href="./index.html"><input type="button" value="Cancelar"></a>
+                    <a href="./login.html"><input type="button" value="Cancelar"></a>
                 </div>
 
                 <div class="boton-volver">
