--- a/register.html
+++ b/register.html
@@ -84,8 +84,8 @@
                 </div>
     
                 <div class="boton-registro">
-                    <input type="button" value="Registrarme">
-                    <a href="./index.html"><input type="button" value="Cancelar"></a>
+                    <a href=""><input type="button" value="Registrarme"></a>
+                    <a href="./register.html"><input type="button" value="Cancelar"></a>
                 </div>
 
                 <div class="boton-volver">
