Terminando genres otra vez

--- a/detail-movies.html
+++ b/detail-movies.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Registro</title>
+    <title>Películas</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <body>
     <header>       
         <nav>
             <div id="logo">
-            <img class="logo" src="./img/logo-blanco-3.png" alt="Logo de la pagina">
+                <a href="./index.html"><img class="logo" src="./img/logo-blanco-3.png" alt="Logo de la pagina"></a> 
             </div>
             <div class="header-nav">
                 <a href="./index.html">Inicio</a> 
