--- a/favourite.html
+++ b/favourite.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Inicio</title>
+    <title>Favoritos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <header>       
         <nav>
             <div id="logo">
-            <img class="logo" src="./img/logo-blanco-3.png" alt="Logo de la pagina">
+                <a href="./index.html"><img class="logo" src="./img/logo-blanco-3.png" alt="Logo de la pagina"></a>
             </div>
             <div class="header-nav">
                 <a href="./index.html">Inicio</a> 
