Genres.html terminado

--- a/genres.html
+++ b/genres.html
@@ -47,7 +47,7 @@
         <div class="genres-container">           
             <div class="moviesg-container">
                 <h2>Películas</h2>
-                <div>
+                <div class="pelisflex">
                     <div>
                         <a href="./detail-genres.html"><h3>Documentales</h3></a>
                     </div>               
@@ -100,7 +100,7 @@
             </div>
             <div class="seriesg-container">
                 <h2>Series</h2>
-                <div>
+                <div class="pelisflex">
                     <div>
                         <a href="./detail-genres.html"><h3>Documentales</h3></a>
                     </div>               
