--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </nav>  
     </header>
-    <main>
+    <!-- <main>
         <div class="peliculas-populares">
             <h2>• PELÍCULAS POPULARES •</h2>
               <div class="main-container">
@@ -55,7 +55,7 @@
                     <!-- <div>
                     <a class="star-a" href="./favourite.html"><i class="fas fa-star"></i></a>
                     </div> -->
-                </div>
+                <!-- </div>
                 <div class="the-last-song">
                     <a href="detail-movies.html"><img src="./img/thelastsong.jfif" alt="Ficha de the last song"></a>
                     <h3>    THE LAST SONG    </h3>
@@ -166,8 +166,181 @@
                         <p>2008 ‧ Drama ‧ 5 temporadas</p>
                     </div>
                 </div>
-    </main>
+    </main> --> -->
+    <main>
+        <div class="main-container">
+            <article class="titulos">
+                <h2>• PELÍCULAS POPULARES •</h2>
+            </article>
+            <div class="popu-pelis">
+                <article>
+                    <div class="imagen">
+                        <a href="detail-movies.html"><img src="./img/marvel-endgame.jpg" alt="Ficha end game"></a>
+                    </div>
+                        <h3>MARVEL: END GAME</h3>
+                        <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-movies.html"><img src="./img/thelastsong.jfif" alt="Ficha the last song"></a>
+                    </div>
+                        <h3>THE LAST SONG</h3>
+                        <p>2010 ‧ Romance/Drama ‧ 1h 47m</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-movies.html"><img src="./img/la-chica-danesa.jpg" alt="Ficha la chica danesa"></a>
+                    </div>
+                        <h3>LA CHICA DANESA</h3>
+                        <p>2015 ‧ Romance/Drama ‧ 1h 59m</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-movies.html"><img src="./img/sherlock-holmes.jfif" alt="Ficha Sherlock Holmes"></a>
+                    </div>
+                        <h3>SHERLOCK HOLMES</h3>
+                        <p>2009 ‧ Misterio/Misterio ‧ 2h 8m</p>
+                </article>
+            </div>
 
+            <article class="titulos">
+                <h2>• LO MÁS VISTO EN PELÍCULAS •</h2>
+            </article>
+            <div class="popu-pelis">
+                <article>
+                    <div class="imagen">
+                        <a href="detail-movies.html"><img src="./img/los ilusionistas.jfif" alt="Ficha nada es lo que parece"></a>
+                    </div>
+                        <h3>LOS ILUSIONISTAS: NADA ES LO QUE PARECE</h3>
+                        <p>2013 ‧ Crimen/Suspenso ‧ 1h 55m</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-movies.html"><img src="./img/nerve.jpg" alt="Ficha nerve"></a>
+                    </div>
+                        <h3>NERVE: UN JUEGO SIN REGLAS</h3>
+                        <p>2016 ‧ Suspenso/Acción ‧ 1h 36m</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-movies.html"><img src="./img/HTLAMI10D.jpg" alt="Ficha como perder a un hombre en 10 días"></a>
+                    </div>
+                        <h3>CÓMO PERDER A UN HOMBRE EN 10 DÍAS</h3>
+                        <p>2003 ‧ Romance/Comedia romántica ‧ 1h 56m</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-movies.html"><img src="./img/losjuegos.jfif" alt="Ficha los juegos del hambre"></a>
+                    </div>
+                        <h3>LOS JUEGOS DEL HAMBRE: SINSAJO PARTE 2</h3>
+                        <p>2012 ‧ Ciencia ficción/Acción ‧ 2h 22m</p>
+                </article>
+            </div>
+            
+            <article class="titulos">
+                <h2>• SERIES POPULARES •</h2>
+            </article>
+            <div class="popu-pelis">
+                <article>
+                    <div class="imagen">
+                        <a href="detail-series.html"><img src="./img/anne.jpeg" alt="Ficha Anne"></a>
+                    </div>
+                        <h3>ANNE WITH AN E</h3>
+                        <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-series.html"><img src="./img/los100.jpg" alt="Ficha the 100"></a>
+                    </div>
+                        <h3>LOS 100 </h3>
+                        <p>2014 ‧ Ciencia ficción ‧ 7 temporadas</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-series.html"><img src="./img/visavis.jfif" alt="Ficha vis a vis"></a>
+                    </div>
+                        <h3>VIS A VIS</h3>
+                        <p>2015 ‧ Suspenso ‧ 4 temporadas</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-series.html"><img src="./img/outlander.jpg" alt="Ficha outlander"></a>
+                    </div>
+                        <h3>OUTLANDER</h3>
+                        <p>2014 ‧ Drama ‧ 5 temporadas</p>
+                </article>
+             </div>
+
+            <article class="titulos">
+                <h2>• LO MÁS VISTO EN SERIES•</h2>
+            </article>
+                <div class="popu-pelis">
+                <article>
+                    <div class="imagen">
+                        <a href="detail-series.html"><img src="./img/anne.jpeg" alt="Ficha Anne"></a>
+                    </div>
+                        <h3>ANNE WITH AN E</h3>
+                        <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-series.html"><img src="./img/los100.jpg" alt="Ficha the 100"></a>
+                    </div>
+                        <h3>LOS 100 </h3>
+                        <p>2014 ‧ Ciencia ficción ‧ 7 temporadas</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-series.html"><img src="./img/visavis.jfif" alt="Ficha vis a vis"></a>
+                    </div>
+                        <h3>VIS A VIS</h3>
+                        <p>2015 ‧ Suspenso ‧ 4 temporadas</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-series.html"><img src="./img/outlander.jpg" alt="Ficha outlander"></a>
+                    </div>
+                        <h3>OUTLANDER</h3>
+                        <p>2014 ‧ Drama ‧ 5 temporadas</p>
+                </article>
+                    </div>
+
+                <article class="titulos">   
+                    <h2>• LO MÁS VISTO EN SERIES •</h2>
+                </article>
+                    <div class="popu-pelis">
+                        <article>
+                    <div class="imagen">
+                        <a href="detail-series.html"><img src="./img/cobrakai.jfif" alt="Ficha cobra kai"></a>
+                    </div>
+                        <h3>COBRA KAI</h3>
+                        <p>2018 ‧ Acción ‧ 3 temporadas</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-series.html"><img src="./img/jane.jpg" alt="Ficha jane"></a>
+                    </div>
+                        <h3>JANE THE VIRGIN</h3>
+                        <p>2014 ‧ Drama ‧ 5 temporadas</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-series.html"><img src="./img/flash.png" alt="Ficha flash"></a>
+                    </div>
+                        <h3>FLASH</h3>
+                        <p>2014 ‧ Ciencia ficción ‧ 7 temporada</p>
+                </article>
+                <article>
+                    <div class="imagen">
+                        <a href="detail-series.html"><img src="./img/breakingbad.jpg" alt="Ficha breaking bad"></a>
+                    </div>
+                        <h3>BREAKING BAD</h3>
+                        <p>2008 ‧ Drama ‧ 5 temporadas</p>
+                </article>
+                    </div>
+        </div>
+
+</main>
 
 
     <footer>
