--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
                     <div class="imagen">
                         <a href="detail-movies.html"><img src="./img/nerve.jpg" alt="Ficha nerve"></a>
                     </div>
-                        <h3>NERVE: UN JUEGO SIN REGLAS</h3>
+                        <h3>NERVE: <br>
+                            UN JUEGO SIN REGLAS</h3>
                         <p>2016 ‧ Suspenso/Acción ‧ 1h 36m</p>
                 </article>
                 <article>
@@ -339,13 +340,8 @@
                 </article>
                     </div>
         </div>
-
-<<<<<<< HEAD
 </main>
 
-
-=======
->>>>>>> 0082dfaa13839e500e5bbf96b1d377726ad9efa5
     <footer>
         <div class="container_footer">
             <div class="box-footer">
